@@ -419,3 +419,7 @@ Tue Jul  1 15:50:57 2003                        Michael Jennings (mej)
 
 Finished the type docs.  Still working on the object docs.
 ----------------------------------------------------------------------
+Thu Jul  3 15:27:36 2003                        Michael Jennings (mej)
+
+More object docs.
+----------------------------------------------------------------------
